# pyduct

./: .gitignore  .pdm.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PYDANTIC_EXTENSION_SUMMARY.md  README.md  README_v2.md  REDESIGN_NOTES.md  pyproject.toml  requirements.txt  setup.py
duct fitting library/: README.MD
duct fitting library/spreadsheets/: venture_industries_guide_fittings_pressure_loss_coef.xlsx
ductwork/: ductwork.py
ductwork/components/: connectors.py  ducts.py  fittings.py
examples/: example1_linear_dp_without_classes.py  example2_linear_pressure_drop_with_classes.py  example3_object_defintion_and_connection_direction.py  example5_calculate_dp.py
fitting_library/: README.MD
pyduct/: connectors.py  ducts.py  fitting_types.py  fittings.py  friction.py  network.py
pyduct/examples/: check_exec_time.py  example1A_linear_dp_without_classes.py  example1B_linear_pressure_drop_with_classes.py  example2B_local_pressure_drop_with_classes.py  example2_local_pressure_drop_with_classes.py  test.py  (+8 more)
pyduct2/: __init__.py  io.py  results.py  schemas.py  sizing.py  visualization.py
pyductwork/: connectors.py  ducts.py  example1B_linear_pressure_drop_with_classes.py  example2B_local_pressure_drop_with_classes.py  example2_linear_pressure_drop_with_classes.py  example3_object_defintion_and_connection_direction.py  example4_pass_flowrates.py  example5_calculate_dp.py  fitting_types.py  fittings.py  friction.py  network.py  standard_sizes.py
schema/: schema.gh  schema.json
spreadsheets/: ACCA manual D 080217.xls  ashrae_fundamentals_flexduct_stretch_correction_factor.xlsx  venture_industries_guide_fittings_pressure_loss_coef.xlsx
src/: WIP_connection_direction.py  WIP_pass_flowrates.py  duct.py  duct_fitings.py  duct_fitting.py  ducts.py  ductwork.py  example1.py  example2.py  example2_linear_pressure_drop_with_classes.py  example3.py  example3_object_defintion_and_connection_direction.py  example4_pass_flowrates.py  example5_WIP.py  example5_calculate_dp.py  fitting_types.py  fittings.py  friction.py  network.py  standard_sizes.py
tests/: small_example_network.py  test_friction.py
(+42 files in other folders)
