[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pyductwork"
version = "0.0.1"
description = "Library for ductwork calculations"
dependencies = [
    "colebrook",
    "matplotlib",
    "networkx",
    "scipy",
    "setuptools>=65.5.1",
]