[tool.pdm]

[project]
name = "pyduct"
version = "0.0.1"
description = "library for ductwork calculations"
authors = [
    {name = "Tokarzewski", email = "bartlomiej.tokarzewski@gmail.com"},
]
dependencies = [
    "matplotlib==3.6.3",
    "networkx==3.0",
    "scipy>=1.9.3",
    "setuptools>=65.5.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
