[project]
name = "pyduct"
version = "0.1.0"
description = "Library for ductwork sizing and pressure-drop calculations."
authors = [
    {name = "Tokarzewski", email = "bartlomiej.tokarzewski@gmail.com"},
]
dependencies = [
    "networkx>=3.0",
    "scipy>=1.9.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
plot = ["matplotlib>=3.6.3"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
include = ["pyduct*", "pyduct2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["pyduct2"]
